[package]
name = "eigen-crypto-bls"
description = "Eigen layer bls utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
eigen-crypto-bn254.workspace = true
thiserror.workspace = true
alloy-primitives.workspace = true
hex = "0.4.3"
eigen-utils.workspace = true
ethers = { version = "2.0", features = ["rustls", "ws"] }
eyre = "0.6.8"
num-bigint = "0.4.4"

#ark
ark-ec = "0.4.2"
ark-bn254 = "0.4.0"
ark-ff.workspace = true

[dev-dependencies]
rand = "0.8.4"
tokio = { workspace = true, features = ["full"] }
